--- a/FrontEndSystem/src/app/login/login.component.html
+++ b/FrontEndSystem/src/app/login/login.component.html
@@ -16,11 +16,11 @@
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="text" placeholder="username" >
-          <input class="form-control me-2" type="password" placeholder="password" >
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="username" >
+          <input class="form-control mr-sm-2" type="password" placeholder="password" >
 
-          <button class="btn btn-success" type="submit">login</button>
+          <button class="btn btn-success my-2 my-sm-0" type="submit">login</button>
         </form>
       </div>
     </div>
