--- a/FrontEndSystem/src/app/nav/nav.component.html
+++ b/FrontEndSystem/src/app/nav/nav.component.html
@@ -13,9 +13,23 @@
       </li>
       <li class="nav-item">
         <a class="nav-link " href="#">Add Employee</a>
+
+        <li class="nav-item">
+          <a class="nav-link " (click)="logout()">Log-out</a>
       
     </ul>
-    <form  #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <div *ngIf="loggedIn()" class="dropdown">
+      <a class="dropdown-toggle text-light">
+        Welcom Employee
+      </a>
+      <div class="dropdown-menu" >
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit profile</a>
+       <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Log out</a>
+      </div>
+    </div>
+    
+    <form *ngIf="!loggedIn()"  #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
       <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username"  [(ngModel)]="model.username" >
       <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password"[(ngModel)]="model.password" >
       <button  [disabled]="!loginForm.valid"class="btn btn-success my-2 my-sm-0" type="submit">login</button>
