--- a/FrontEndSystem/src/app/register/register.component.html
+++ b/FrontEndSystem/src/app/register/register.component.html
@@ -1,7 +1,10 @@
+
+<div class="container text-center " style="max-width: 500px;">
+    <div class="jumbotron"> 
 <form #registerForm="ngForm" (ngSubmit)="register()"> 
     <h2 class="text-center text-primary"> Sign Up</h2>
     <hr>
-    <div class="form-group">
+    <div class="form-group input-group-prepend">
         <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Enter Username">
     </div>
     <div class="form-group">
@@ -12,3 +15,5 @@
         <button class="btn btn-default" type="button" (click)="cancel()"> Cancel</button>
     </div>
 </form>
+</div>
+</div>
