--- a/FrontEndSystem/src/app/register/register.component.html
+++ b/FrontEndSystem/src/app/register/register.component.html
@@ -10,6 +10,12 @@
     <div class="form-group">
         <input type="password" class="form-control" required name="username" [(ngModel)]="model.password"placeholder="Enter Password">
     </div>
+    <div class="form-group">
+        <input type="password" class="form-control" required name="jobnumber" [(ngModel)]="model.jobnumber"placeholder="Enter job Number">
+    </div>
+    div class="form-group">
+        <input type="password" class="form-control" required name="birthdate" [(ngModel)]="model.birthdate"placeholder="Enter birth date">
+    </div>
     <div class="form-group text-center">
         <button class="btn btn-success" type="submit"> Register</button>
         <button class="btn btn-default" type="button" (click)="cancel()"> Cancel</button>
