--- a/FrontEndSystem/src/app/register/register.component.html
+++ b/FrontEndSystem/src/app/register/register.component.html
@@ -7,14 +7,15 @@
     <div class="form-group input-group-prepend">
         <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Enter Username">
     </div>
+    
     <div class="form-group">
         <input type="password" class="form-control" required name="username" [(ngModel)]="model.password"placeholder="Enter Password">
     </div>
     <div class="form-group">
-        <input type="password" class="form-control" required name="jobnumber" [(ngModel)]="model.jobnumber"placeholder="Enter job Number">
+        <input type="text" class="form-control" required name="jobnumber" [(ngModel)]="model.jobnumber"placeholder="Enter job Number">
     </div>
-    div class="form-group">
-        <input type="password" class="form-control" required name="birthdate" [(ngModel)]="model.birthdate"placeholder="Enter birth date">
+   <div class="form-group">
+        <input type="date" class="form-control" required name="birthdate" [(ngModel)]="model.birthdate"placeholder="Enter birth date">
     </div>
     <div class="form-group text-center">
         <button class="btn btn-success" type="submit"> Register</button>
