--- a/FrontEndSystem/src/app/mange/mange.component.html
+++ b/FrontEndSystem/src/app/mange/mange.component.html
@@ -1,35 +1,53 @@
-<hr>
-<h1>Hi toqa</h1>
-
-<div class="contener">
-    <table class="table table-striped  table-hover">
-        <thead class="table-danger">
-<th>Name</th>
-<th>Id</th>
-<th>phoneNumber</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Yazn</td>
-                <td>2</td>
-                <td>0795764456</td>
-            </tr>
-            <tr>
-                <td>Fadel</td>
-                <td>10</td>
-                <td>0795764456</td>
-            </tr>
-            <tr>
-                <td>Eman</td>
-                <td>5</td>
-                <td>0795764456</td>
-            </tr>
-        </tbody>
-
-    </table>
-
-
-</div>
-<div>
-    <button class="btn btn-lg btn-outline-dark">Next</button>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-info">
+    <a class="navbar-brand" [routerLink]="['/manage']">Vactions System</a>
+    
+  
+    
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/manage']">Home </a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" [routerLink]="['/manage-vactions']"> Management Vactions</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link  " [routerLink]="['/employee']">Employee</a>
+  
+          <li class="nav-item">
+            <a class="nav-link " (click)="logout()">Log-out</a>
+        
+      </ul>
+      <div *ngIf="loggedIn()" class="dropdown">
+        <a class="dropdown-toggle text-light">
+          Welcom {{users}}
+        </a>
+        <div class="dropdown-menu" >
+          <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit profile</a>
+         <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Log out</a>
+        </div>
+      </div>
+      
+      <form *ngIf="!loggedIn()"  #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+        <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username"  [(ngModel)]="model.username" >
+        <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password"[(ngModel)]="model.password" >
+        <button  [disabled]="!loginForm.valid"class="btn btn-success my-2 my-sm-0" type="submit">login</button>
+      </form>
+   
+  </nav>
+  <section class="container mt-3 bg-info">
+  
+    <div  *ngIf="!registerMode" class=" jumbotron text-center">
+      <h1 class="jumbotron-heading"> Now you can Mange all Employee A Vaction Day</h1>
+      <p style="font-size: large"  class="text-muted">Welcome Manger</p>
+    <p *ngIf="!loggedIn()" style="font-size: large"  class="text-muted">No account! Register</p>
+      <p class="lead text-muted">Rejester to the System</p>
+      <p>
+        <button *ngIf="!loggedIn()"  hr  class="btn btn-primary my-2 mr-2" [routerLink]="['/manger-register']"  routerLinkActive="active" (click)="rejesterToggel()">Register</button>
+        <a routerLinkActive="active" [routerLink]="['/nav'] "class="btn btn-secondary my-2 mr-2">
+          Swith to Employee Page
+        </a>
+      </p>
+  
+    </div>
+  </section>
