--- a/FrontEndSystem/src/app/nav/nav.component.html
+++ b/FrontEndSystem/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" [routerLink]="['/**']">Vactions System</a>
+  <a class="navbar-brand" [routerLink]="['/nav']">Vactions System</a>
   
 
   
