--- a/FrontEndSystem/src/app/requests/requests.component.html
+++ b/FrontEndSystem/src/app/requests/requests.component.html
@@ -1,3 +1,40 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" [routerLink]="['/nav']">Vactions System</a>
+  
+
+  
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/nav']">Home </a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="['/requests']">Vactions Request</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link  " [routerLink]="['/employee']">Employee</a>
+
+        <li class="nav-item">
+          <a class="nav-link " (click)="logout()">Log-out</a>
+      
+    </ul>
+    <div *ngIf="loggedIn()" class="dropdown">
+      <a class="dropdown-toggle text-light">
+        Welcom {{users}}
+      </a>
+      <div class="dropdown-menu" >
+        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit profile</a>
+       <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Log out</a>
+      </div>
+    </div>
+    
+    <form *ngIf="!loggedIn()"  #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+      <input class="form-control mr-sm-2" type="text" name="username" required placeholder="Username"  [(ngModel)]="model.username" >
+      <input class="form-control mr-sm-2" type="password" name="password" required placeholder="Password"[(ngModel)]="model.password" >
+      <button  [disabled]="!loginForm.valid"class="btn btn-success my-2 my-sm-0" type="submit">login</button>
+    </form>
+ 
+</nav>
 <div class="container">
     <div class="row ">
       <div class="col-md-12 ">
@@ -44,7 +81,7 @@
         </div>
         <div class="form-group">
           <label>Employee Id :</label>
-          <input type="text" name="type"  class="form-control" [(ngModel)]="VactionAdd.empID">
+          <input type="text" name="empID"  class="form-control"value="VactionAdd.empID"  disabled [(ngModel)]="VactionAdd.empID">
         </div>
         <div>
           <input type="submit" class="btn btn-dark btn-lg" value="Save Vactions" >
