--- a/FrontEndSystem/src/app/mange/mange.component.html
+++ b/FrontEndSystem/src/app/mange/mange.component.html
@@ -19,7 +19,7 @@
       </ul>
       <div *ngIf="loggedIn()" class="dropdown">
         <a class="dropdown-toggle text-light">
-          Welcom {{users}}
+          Welcom {{auth.mangerToken?.unique_name }}
         </a>
         <div class="dropdown-menu" >
           <a class="dropdown-item" href="#"><i class="fa fa-user"></i>Edit profile</a>
