--- a/FrontEndSystem/src/app/requests/requests.component.html
+++ b/FrontEndSystem/src/app/requests/requests.component.html
@@ -81,7 +81,7 @@
         </div>
         <div class="form-group">
           <label>Employee Id :</label>
-          <input type="text" name="empID"  class="form-control"value="VactionAdd.empID"  disabled [(ngModel)]="VactionAdd.empID">
+          <input type="text" name="empID"  class="form-control" value=""  disabled [(ngModel)]="vactionsService.Empid">
         </div>
         <div>
           <input type="submit" class="btn btn-dark btn-lg" value="Save Vactions" >
