--- a/FrontEndSystem/src/app/nav/nav.component.html
+++ b/FrontEndSystem/src/app/nav/nav.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" [routerLink]="['/requests']">Vactions Request</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link  " [routerLink]="['/employee']">Employee</a>
+        <a class="nav-link  " [routerLink]="['/nav']">Employee</a>
 
         <li class="nav-item">
           <a class="nav-link " (click)="logout()">Log-out</a>
